Verif/Test/Valide/test_nom_identique_classe_methode.deca
// Description:
//    test de meme nom classe et methode
//
// Resultats:
//		aucune erreur et aucun affichage
// 
// Attributs: exec correct automatique
//
// Historique:
//    cree le 19/01/2012



class add {
  
   int add(int i) {
      return i+1;
   }

}
